El que me pasaste en el pendrive

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,7 @@
-cmake_minimum_required(VERSION 3.8)
+cmake_minimum_required(VERSION 3.5)
 project(solucion)
 
+set(CMAKE_CXX_FLAGS -g)
 set(CMAKE_CXX_STANDARD 11)
 
 # Leemos todos los archivos fuentes en ./src
@@ -12,7 +13,7 @@ file(GLOB TEST_SOURCES tests/*.cpp)
 add_subdirectory(tests/google-test)
 
 # Creamos el ejecutable para correr los tests
-add_executable(correrTests ${TEST_SOURCES} ${SOURCE_FILES} src/Driver.cpp tests/test_diccionariotrie.cpp)
+add_executable(correrTests ${TEST_SOURCES} ${SOURCE_FILES})
 
 # Necesitamos asociar los archivos del framework de testing
 target_link_libraries(correrTests gtest gtest_main)
